--- a/gauge-test-original.ipynb
+++ b/gauge-test-original.ipynb
@@ -167,11 +167,141 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Remove function portion"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os, sys\n",
+    "import matplotlib\n",
+    "from matplotlib import cm\n",
+    "from matplotlib import pyplot as plt\n",
+    "import numpy as np\n",
+    "from matplotlib.patches import Circle, Wedge, Rectangle\n",
+    "\n",
+    "\n",
+    "def degree_range(n): \n",
+    "    start = np.linspace(0,180,n+1, endpoint=True)[0:-1]\n",
+    "    print(f\"start: {start}\")\n",
+    "    end = np.linspace(0,180,n+1, endpoint=True)[1::]\n",
+    "    print(f\"end: {end}\")\n",
+    "    mid_points = start + ((end-start)/2.)\n",
+    "    print(f\"Mid Points: {mid_points}\")\n",
+    "    print(np.c_[start, end], mid_points)\n",
+    "    return np.c_[start, end], mid_points\n",
+    "\n",
+    "\n",
+    "def rot_text(ang): \n",
+    "    rotation = np.degrees(np.radians(ang) * np.pi / np.pi - np.radians(90))\n",
+    "    return rotation\n",
+    "\n",
+    "labels=['LOW','MEDIUM','HIGH','VERY HIGH','EXTREME']\n",
+    "colors='jet_r'\n",
+    "arrow=1\n",
+    "title=''\n",
+    "fname=False\n",
+    "    \n",
+    "\"\"\"\n",
+    "some sanity checks first\n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "N = len(labels)\n",
+    "\n",
+    "if arrow > N: \n",
+    "    raise Exception(\"\\n\\nThe category ({}) is greated than \\\n",
+    "    the length\\nof the labels ({})\".format(arrow, N))\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "if colors is a string, we assume it's a matplotlib colormap\n",
+    "and we discretize in N discrete colors \n",
+    "\"\"\"\n",
+    "\n",
+    "if isinstance(colors, str):\n",
+    "    cmap = cm.get_cmap(colors, N)\n",
+    "    cmap = cmap(np.arange(N))\n",
+    "    colors = cmap[::-1,:].tolist()\n",
+    "if isinstance(colors, list): \n",
+    "    if len(colors) == N:\n",
+    "        colors = colors[::-1]\n",
+    "    else: \n",
+    "        raise Exception(\"\\n\\nnumber of colors {} not equal \\\n",
+    "        to number of categories{}\\n\".format(len(colors), N))\n",
+    "\n",
+    "\"\"\"\n",
+    "begins the plotting\n",
+    "\"\"\"\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "ang_range, mid_points = degree_range(N)\n",
+    "\n",
+    "labels = labels[::-1]\n",
+    "\n",
+    "\"\"\"\n",
+    "plots the sectors and the arcs\n",
+    "\"\"\"\n",
+    "patches = []\n",
+    "for ang, c in zip(ang_range, colors): \n",
+    "    # sectors\n",
+    "    patches.append(Wedge((0.,0.), .4, *ang, facecolor='w', lw=2))\n",
+    "    # arcs\n",
+    "    patches.append(Wedge((0.,0.), .4, *ang, width=0.10, facecolor=c, lw=2, alpha=0.5))\n",
+    "\n",
+    "[ax.add_patch(p) for p in patches]\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "set the labels (e.g. 'LOW','MEDIUM',...)\n",
+    "\"\"\"\n",
+    "\n",
+    "for mid, lab in zip(mid_points, labels): \n",
+    "\n",
+    "    ax.text(0.35 * np.cos(np.radians(mid)), 0.35 * np.sin(np.radians(mid)), lab, \\\n",
+    "        horizontalalignment='center', verticalalignment='center', fontsize=14, \\\n",
+    "        fontweight='bold', rotation = rot_text(mid))\n",
+    "\n",
+    "\"\"\"\n",
+    "set the bottom banner and the title\n",
+    "\"\"\"\n",
+    "r = Rectangle((-0.4,-0.1),0.8,0.1, facecolor='w', lw=2)\n",
+    "ax.add_patch(r)\n",
+    "\n",
+    "ax.text(0, -0.05, title, horizontalalignment='center', \\\n",
+    "        verticalalignment='center', fontsize=22, fontweight='bold')\n",
+    "\n",
+    "\"\"\"\n",
+    "plots the arrow now\n",
+    "\"\"\"\n",
+    "\n",
+    "pos = mid_points[abs(arrow - N)]\n",
+    "\n",
+    "ax.arrow(0, 0, 0.225 * np.cos(np.radians(pos)), 0.225 * np.sin(np.radians(pos)), \\\n",
+    "                width=0.04, head_width=0.09, head_length=0.1, fc='k', ec='k')\n",
+    "\n",
+    "ax.add_patch(Circle((0, 0), radius=0.02, facecolor='k'))\n",
+    "ax.add_patch(Circle((0, 0), radius=0.01, facecolor='w', zorder=11))\n",
+    "\n",
+    "\"\"\"\n",
+    "removes frame and ticks, and makes axis equal and tight\n",
+    "\"\"\"\n",
+    "\n",
+    "ax.set_frame_on(False)\n",
+    "ax.axes.set_xticks([])\n",
+    "ax.axes.set_yticks([])\n",
+    "ax.axis('equal')\n",
+    "plt.tight_layout()\n",
+    "if fname:\n",
+    "    fig.savefig(fname, dpi=200)"
+   ]
   }
  ],
  "metadata": {
