Updated previous fix

--- a/gauge-test.ipynb
+++ b/gauge-test.ipynb
@@ -104,8 +104,9 @@
     "\n",
     "datalist = dataset.values.tolist()[0]\n",
     "for key, val in enumerate(datalist):\n",
-    "    if val.is_integer():\n",
-    "        datalist[key] = int(val)\n",
+    "    if type(val) == float:\n",
+    "        if val.is_integer():\n",
+    "            datalist[key] = int(val)\n",
     "print(datalist)\n",
     "\n",
     "g_val = datalist[0]\n",
@@ -115,6 +116,26 @@
     "\n",
     "gauge(labels= g_l, cval= g_val, cmin= g_min, cmax= g_max)\n",
     "plt.show"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(1.0)"
    ]
   },
   {
